# bibicord

./: Cargo.toml  README.md
privoxy/: config
src/: main.rs
src/neteaseapi/: encrypto.rs  mod.rs  netease.rs
