[package]
name = "bibicord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serenity = { version = "0.10", features = ["voice"] }
tokio = { version = "1.17", features = ["full"] }
songbird = { version = "0.2", features = ["builtin-queue"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"