[package]
name = "bibicord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serenity = { version = "0.10", features = ["voice"] }
tokio = { version = "1.17", features = ["macros", "rt", "rt-multi-thread"] }
songbird = { version = "0.2", features = ["builtin-queue"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
lazy_static = "1.4"
openssl = "0.10"
rand = "0.8"
hex = "0.4"
urlqstring = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
async-trait = "0.1"
which = "4.2"